--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ h3 {
   line-height: 1.2;
   color: #2e2f42;
 }
+
 .nav-logo-web {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
@@ -43,16 +44,19 @@ h3 {
   color: #4d5ae5;
   text-decoration: none;
 }
+
 .nav-logo {
   color: #2e2f42;
 }
-.btn-link a {
+
+.nav-link {
   font-weight: 500;
   color: #2e2f42;
   text-decoration: none;
 }
-.btn-link a:hover,
-.btn-link a:focus {
+
+.nav-link:hover,
+.nav-link:focus {
   color: #404bbf;
 }
 
