--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@ h3 {
   color: #2e2f42;
 }
 
+ul {
+  list-style: none;
+}
+
 .nav-logo-web {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
